# SK-WaveHill-2024

./: .gitignore  01-LangGraph-Building-Graphs.ipynb  02-LangGraph-CRAG.ipynb  03-LangGraph-Prompt-Generation.ipynb  README.md  dataanalysis.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: 01_CSV_Agent_With_History.py  02_ReAct_Agent.py
tmp/: agent_press_release.md
