[tool.poetry]
name = "sk-wavehill"
version = "0.1.0"
description = ""
authors = ["teddy <teddylee777@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
langchain = "^0.3.8"
langchain-openai = "^0.2.9"
pandas = "^2.2.3"
langchain-teddynote = "^0.3.31"
streamlit = "^1.40.2"
jupyter = "^1.1.1"
notebook = "^7.2.2"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.8"
pdfplumber = "^0.11.4"
langchain-experimental = "^0.3.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
faiss-cpu = "^1.9.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
